--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "desafiocubos",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./src/index"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +16,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "description": ""
 }
