--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs.promises": "^0.1.2",
+    "handlebars": "^4.7.8",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.7",
     "pg": "^8.11.3"
   },
   "devDependencies": {
