--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/index",
-    "start": "node ./src/index.js"
+    "start": "node --tls-min-v1.2 ./src/index.js"
   },
   "keywords": [],
   "author": "",
