--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1520.0",
+    "@aws-sdk/client-s3": "^3.477.0",
+    "@aws-sdk/credential-provider-ini": "^3.477.0",
+    "aws-sdk": "^2.1522.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -20,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
